[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-incident-gym"
version = "1.0.0"
description = "OpenEnv-compliant SRE incident response training environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenEnv Hackathon Participant"}
]
keywords = ["sre", "incident-response", "devops", "reinforcement-learning", "openenv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "openai>=1.3.9",
    "openenv-core>=0.2.0",
]

# ── Required by the OpenEnv validator ──────────────────────────────────────
[project.scripts]
server = "server.app:main"
sre-incident-gym-server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/revanth2605/sre-incident-gym"
Documentation = "https://github.com/revanth2605/sre-incident-gym#readme"
Repository = "https://github.com/revanth2605/sre-incident-gym.git"
Issues = "https://github.com/revanth2605/sre-incident-gym/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
